--- a/init.vivow.rc
+++ b/init.vivow.rc
@@ -1,3 +1,18 @@
+import init.vivow.usb.rc
+
+on early-init
+    export EXTERNAL_STORAGE /mnt/sdcard
+    mkdir /mnt/sdcard 0000 system system
+    # for backwards compatibility
+    symlink /mnt/sdcard /sdcard
+
+    export PHONE_STORAGE /mnt/emmc
+    mkdir /mnt/emmc 0000 system system
+    symlink /mnt/emmc /emmc
+
+    export USB_STORAGE /mnt/usb_storage
+    mkdir /mnt/usb_storage 0000 system system
+
 on boot
     mount debugfs /sys/kernel/debug /sys/kernel/debug
     mkdir /data/radio 0770 radio radio
@@ -12,7 +27,6 @@ on fs
     mount ext4 /dev/block/mmcblk0p27 /cache wait noatime nosuid nodev barrier=1
     mount ext4 /dev/block/mmcblk0p28 /local wait noatime nosuid nodev barrier=1
     mount ext4 /dev/block/mmcblk0p29 /devlog wait noatime nosuid nodev barrier=1
-
 
     mkdir /data/misc 1771 system misc
     mkdir /data/misc/wifi 0770 wifi wifi
@@ -54,6 +68,8 @@ on fs
     chmod 0660        /sys/class/power_supply/battery/charger_control
 
     # bluetooth power up/down interface
+    chown bluetooth bluetooth /dev/ttyHS0
+    chmod 0600 /dev/ttyHS0
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
     chmod 0660                /sys/class/rfkill/rfkill0/state
@@ -72,7 +88,6 @@ on fs
     chown system system /sys/class/leds/button-backlight-portrait/brightness
     chown system system /sys/class/leds/button-backlight-landscape/brightness
     chown system system /sys/class/leds/lcd-backlight/brightness
-
     chown system camera /sys/class/leds/flashlight/brightness
     chmod 0660          /sys/class/leds/flashlight/brightness
 
@@ -93,20 +108,24 @@ service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant \
 #   after setting up the capabilities required for WEXT
 #   user wifi
 #   group wifi inet keystore
+    class main
     socket wpa_eth0 dgram 660 wifi wifi
     disabled
     oneshot
 
 service dhcpcd_eth0 /system/bin/dhcpcd -ABKL
+    class main
     disabled
     oneshot
 
 service iprenew_eth0 /system/bin/dhcpcd -n
+    class main
     disabled
     oneshot
 
 # compass/accelerometer daemon
 service akmd /system/bin/akmd
+    class main
     user compass
     group compass misc input
 
@@ -118,6 +137,7 @@ service bugreport /system/bin/dumpstate -d -v -o /sdcard/bugreports/bugreport
 
 service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm \
     --baudrate 3000000 --patchram /etc/firmware/bcm4329.hcd /dev/ttyHS0
+    class main
     user bluetooth
     group bluetooth net_bt_admin
     disabled
